--- a/themes/kube/layouts/_default/baseof.html
+++ b/themes/kube/layouts/_default/baseof.html
@@ -42,6 +42,11 @@
   <link href="{{ "/css/kube.demo.css" | relURL }}" rel="stylesheet" type="text/css">
 <!-- Your own theme here -->
  <link href="{{ "/css/custom.css" | relURL }}" rel="stylesheet" type="text/css">
+  <!-- Highlight.js and css -->
+  <link rel="stylesheet"
+        href="{{ "/js/highlight/styles/github.css"}} ">
+  <script src="{{ "/js/highlight/highlight.pack.js"}}"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 <!-- js vendor -->
   <script src="{{ "/js/jquery-2.1.4.min.js" | relURL }}" type="text/javascript">
   </script>
