--- a/themes/kube/layouts/partials/post/related-content.html
+++ b/themes/kube/layouts/partials/post/related-content.html
@@ -4,8 +4,8 @@
 
 {{ if $.Scratch.Get "has_related" }}
   <aside>
-    <heade><strong>Related Content</strong></header>
-    <hr>
+    <heade><strong>相关内容</strong></header>
+    <hr style="margin: 5px;">
     <ul>
       {{ $num_to_show := .Site.Params.related_content_limit | default 7 }}
       {{ range first $num_to_show (where (where .Site.Pages ".Params.tags" "intersect" .Params.tags) "Permalink" "!=" .Permalink) }}
