--- a/themes/kube/layouts/blog/single.html
+++ b/themes/kube/layouts/blog/single.html
@@ -21,8 +21,8 @@
 <div class="form-subscribe">
     <div id="form-subscribe-success" style="display: none;"></div>
 <div id="form-subscribe-box">
-        <h4>All about Redactor, Grafs and Kube.</h4>
-        <p>Monthly news &amp; updates. Just straight to the point.</p>
+        <h4>Bugjc每周精要</h4>
+        <p>订阅每周资讯更新,就直接点击</p>
 
         <form action="" name="mc-embedded-subscribe-form" method="post" class="form"><input type="hidden" name="authorize-token" value="">
             <div id="subscribe-email-validation-error"></div>
@@ -37,7 +37,7 @@
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="" tabindex="-1" value=""></div>
         </form>
 
-        <div class="form-subscribe-twitter"><div>or</div> <a href="https://twitter.com/jebli_7">Follow us on Twitter</a></div>
+        <div class="form-subscribe-twitter"><div>or</div> <a href="https://www.weibo.com/2251226247/profile?rightmod=1&wvr=6&mod=personinfo">微博关注</a></div>
     </div>
 </div>
 
@@ -56,3 +56,4 @@
 </div>
 {{ end }}
 {{ define "footer"}} {{ partial "footer.html" .}} {{ end }}
+
