--- a/themes/kube/layouts/partials/footer.html
+++ b/themes/kube/layouts/partials/footer.html
@@ -3,14 +3,14 @@
       <ul>
         <li><span>Bugjc</span></li>
         <li>
-          <a href="/blog/">Blog</a>
+          <a href="/blog/">博客</a>
         </li>
         <li>
-          <a href="/data/">Data Repository
+          <a href="/data/">资料存储
           </a>
         </li>
           <li>
-          <a href="/about/">About</a>
+          <a href="/about/">关于</a>
         </li>
         <!-- <li>
           <a href="https://twitter.com/{{.Site.Params.twitter}}">Give a shout-out on Twitter!</a>
