--- a/themes/kube/layouts/section/potw.html
+++ b/themes/kube/layouts/section/potw.html
@@ -3,18 +3,16 @@
 {{ define "main"}}
 <div id="main">
   <div id="hero">
-    <h2>资料存储库</h2>
-    <p>对于阅读过的文章进行归档；<b>去其糟粕，取其精华。</b></p>
+    <h2>每周精选</h2>
+    <p>选出每周阅读后认为最好的5篇好文。</p>
   </div>
   <div id="components">
     <div class="row gutters">
       {{ range .Data.Pages.ByWeight}}
-      {{ if .Params.isShow }}
       <div class="col col-4 item">
         <h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
         <p>{{ .Params.description }}</p>
       </div>
-      {{ end }}
       {{ end }}
 
     </div>
