--- a/site/themes/kube/layouts/partials/footer.html
+++ b/site/themes/kube/layouts/partials/footer.html
@@ -6,7 +6,7 @@
           <a href="/blog/">博客</a>
         </li>
         <li>
-          <a href="/site/data">资料存储
+          <a href="/data">资料归档
           </a>
         </li>
           <li>
