--- a/site/themes/kube/layouts/index.html
+++ b/site/themes/kube/layouts/index.html
@@ -21,7 +21,7 @@
           <img alt="Baseline" height="48" src="{{ "/img/kube/icon-baseline.png" | relURL }}" width="48">
         </figure>
         <h3>学习资料索引库</h3>
-        <p>资料库记录着我学习过程中遇到的问题、深有感触的文章和耳目一新的设计思想,最终将对我有帮助的文章笔记进行归类索引.</p>
+        <p>资料库记录着我学习过程中遇到的问题、深有感触的文章和耳目一新的设计思想,最终将对我有帮助有启发的文章笔记进行归类索引.</p>
       </div>
       <div class="col col-4 item">
         <figure>
