--- a/site/themes/kube/layouts/_default/list.html
+++ b/site/themes/kube/layouts/_default/list.html
@@ -3,10 +3,15 @@
 
 {{ define "main" }}
 
-<!-- <div id="hero" class="wrap">
-  <h2>本栏目记录学习过程中不错的文章和笔记</h2>
-    <p>Our vision, news and ideas, and whatever feels important.<br> <a href="https://twitter.com/{{.Site.Params.twitter}}">Follow us on Twitter</a></p>
-</div> -->
+<!--<div id="hero" class="wrap">-->
+  <!--<h2>本栏目记录学习过程中不错的文章和笔记</h2>-->
+    <!--<p>Our vision, news and ideas, and whatever feels important.<br> <a href="https://twitter.com/{{.Site.Params.twitter}}">Follow us on Twitter</a></p>-->
+<!--</div>-->
+
+<ul>
+    <li><a href="/tags/java">Java</a></li>
+    <li><a href="/tags/atomic">atomic</a></li>
+</ul>
 
 <ul id="posts">
  {{ range .Paginator.Pages.ByWeight }} {{ partial "page-summary" . }} {{ end }}
