--- a/site/themes/kube/layouts/index.html
+++ b/site/themes/kube/layouts/index.html
@@ -18,40 +18,48 @@
     <div class="row gutters">
       <div class="col col-4 item">
         <figure>
-          <img alt="Baseline" height="48" src="{{ "/img/kube/icon-baseline.png" | relURL }}" width="48">
+          <img alt="Baseline" height="48" src="{{ "/img/kube/icon-article.png" | relURL }}" width="48">
         </figure>
-        <h3>学习资料索引库</h3>
-        <p>资料库记录着我学习过程中遇到的问题、深有感触的文章和耳目一新的设计思想,最终将对我有帮助有启发的文章笔记进行归类索引.</p>
+        <h3>文章笔记</h3>
+        <p>收藏、整理对我有启发有帮助的文章。</p>
       </div>
       <div class="col col-4 item">
         <figure>
-          <img alt="Typography" height="48" src="{{ "/img/kube/icon-typo.png" | relURL }}" width="48">
+          <img alt="Typography" height="48" src="{{ "/img/kube/icon-book.png" | relURL }}" width="48">
         </figure>
-        <h3>Spring boot 示例</h3>
-        <p>Springboot示例项目是实际项目开发过程中使用到的技术,并且是基于springboot的.</p>
+        <h3>开源图书</h3>
+        <p>收藏、整理对我有启发有帮助的图书。</p>
       </div>
       <div class="col col-4 item">
         <figure>
-          <img alt="Minimalism" height="48" src="{{ "/img/kube/icon-minimalism.png" | relURL }}" width="48">
+          <img alt="Minimalism" height="48" src="{{ "/img/kube/icon-search.png" | relURL }}" width="48">
         </figure>
-        <h3>业务工具箱</h3>
-        <p>项目索引Java开发过程中好用的工具,以及在工具的基础上增强业务的可用性.</p>
+        <h3>资料搜索</h3>
+        <p>收集资料搜索、导航网站</p>
       </div>
     </div>
-    <!-- <div class="row gutters">
+    <div class="row gutters">
       <div class="col col-4 item">
-        <h4>Mobile-first Design</h4>
-        <p>Every element in kube is mobile-first and fully embraces latest and greatest tech.</p>
+        <figure>
+          <img alt="Baseline" height="48" src="{{ "/img/kube/icon-norm.png" | relURL }}" width="48">
+        </figure>
+        <h3>编程规范</h3>
+        <p>收集、整理软件开发相关规范。</p>
       </div>
       <div class="col col-4 item">
-        <h4>Cross-browser</h4>
-        <p>Kube works in all modern browsers, both desktop and mobile, including latest Chrome, Firefox, Safari, Opera, IE and Edge.</p>
+        <figure>
+          <img alt="Baseline" height="48" src="{{ "/img/kube/icon-opensource.png" | relURL }}" width="48">
+        </figure>
+        <h3>优质开源</h3>
+        <p>收藏、整理软件开发过程中使用到的优质开源项目。</p>
       </div>
       <div class="col col-4 item">
-        <h4>License</h4>
-        <p>Kube licensed under <a href="https://opensource.org/licenses/MIT">MIT</a>.<br>
-      Kube Framework is absolutely free for personal or commercial use.</p>
-    </div> -->
+        <figure>
+          <img alt="Baseline" height="48" src="{{ "/img/kube/icon-tool.png" | relURL }}" width="48">
+        </figure>
+        <h3>软件工具</h3>
+        <p>收藏、整理项目开发过程中使用到的软件工具。</p>
+    </div>
   </div>
 </div>
 </div>
