--- a/site/themes/kube/static/css/custom.css
+++ b/site/themes/kube/static/css/custom.css
@@ -1,3 +1,11 @@
 a {
     text-decoration:none;
 }
+
+#hero {
+    max-width: 740px;
+    padding-top: 48px;
+    padding-bottom: 56px;
+    text-align: left;
+    margin: auto;
+}
