--- a/site/themes/kube/layouts/blog/single.html
+++ b/site/themes/kube/layouts/blog/single.html
@@ -4,7 +4,7 @@
 {{ define "main"}}
 <div class="push-center" itemscope itemtype="http://schema.org/BlogPosting">
     {{ template "_internal/schema.html" . }}
-<div id="hero">
+<div id="hero-blog">
     <h2 itemprop="headline">  {{.Title}}</h2>
     {{ if .Description }}
 <blockquote style="max-width: 740px;margin: auto;" itemprop="description">{{ .Description }}</blockquote>
