link:调度器系统设计总结

--- a/site/themes/kube/layouts/partials/post/meta.html
+++ b/site/themes/kube/layouts/partials/post/meta.html
@@ -1,7 +1,7 @@
 <span class="icon">
   <i class="fa fa-clock-o" aria-hidden="true"></i>
 </span>
-<span>阅读时间：{{ .ReadingTime}}分钟</span>
+<span>阅读时间：{{ .Params.read_time }} 分钟</span>
 
 <span class="icon">
  <i class="fa fa-pencil" aria-hidden="true"></i>
