--- a/site/themes/kube/layouts/partials/post/related-content.html
+++ b/site/themes/kube/layouts/partials/post/related-content.html
@@ -9,7 +9,7 @@
     <ul>
       {{ $num_to_show := .Site.Params.related_content_limit | default 7 }}
       {{ range first $num_to_show (where (where .Site.Pages ".Params.tags" "intersect" .Params.tags) "Permalink" "!=" .Permalink) }}
-        <li><a href="{{ .RelPermalink }}">{{ .Title }}</a> &ndash; {{ .ReadingTime }} 分钟
+        <li><a href="{{ .RelPermalink }}">{{ .Title }}</a> &ndash; <span style="font-size: 12px">阅读时间：{{ .Params.read_time }} 分钟</span>
       {{ end }}
     </ul>
   </aside>
