--- a/site/themes/kube/layouts/_default/baseof.html
+++ b/site/themes/kube/layouts/_default/baseof.html
@@ -52,6 +52,16 @@
   </script>
 
   <script type="text/javascript" src="{{ "/js/tocbot.min.js" | relURL }}"></script>
+
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?af66f2953c93be821937ae93ef9d257e";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 
 
