--- a/site/themes/kube/layouts/partials/footer.html
+++ b/site/themes/kube/layouts/partials/footer.html
@@ -17,5 +17,5 @@
         </li> -->
       </ul>
     </nav>
-    <p>Copyright © Bugjc 2018 <a href="http://www.beian.miit.gov.cn">粤ICP备15106335号</a></p>
+    <p>Copyright © Bugjc 2018 <a href="https://beian.miit.gov.cn">粤ICP备15106335号</a></p>
   </footer>
